# govee

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  lcov.info  lefthook.yml  release.toml
.dev/m07/: security-audit.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  clippy-analysis.yml  coverage.yml  dependency-review.yml  release.yml  scorecard.yml
docs/: design.md
src/: capability.rs  config.rs  error.rs  lib.rs  registry.rs  scene.rs  types.rs
src/backend/: cloud.rs  local.rs  mock.rs  mod.rs
src/workflow/: types.rs
tests/: cloud_mock.rs  local_mock.rs
